# cloudrun_llamamodel

./: .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  deploy_cloud_run_service.sh  docker-compose.yml  pyproject.toml
app/: main.py
notesbooks/: llama2_test.py  llama_ccp_test.ipynb  query_test.ipynb  transformer_test.ipynb
