[tool.poetry]
name = "llama2-service"
version = "0.1.0"
description = "demo"
authors = ["nsnguyen <nsnguyen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
pydantic = "^2.0.3"
requests = "^2.31.0"
celery = {extras = ["redis"], version = "^5.3.4"}
llama-cpp-python = "^0.2.20"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests/*.py"
]